--- a/website/index.html
+++ b/website/index.html
@@ -23,6 +23,41 @@
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
   </nav>
+
+  <div class="container">
+    <div class="row">
+      <div class="input-field col s12">
+        <input id="your_name" type="text">
+        <label for="your_name">Your Name</label>
+      </div>
+
+      <div class="input-field col s12">
+        <div class="file-field input-field">
+          <div class="btn">
+            <span>File</span>
+            <input type="file">
+          </div>
+          <div class="file-path-wrapper">
+            <input class="file-path validate" type="text">
+          </div>
+        </div>
+      </div>
+
+      <div class="input-field col s12">
+        <div class="file-field input-field">
+          <div class="btn">
+            <span>Camera</span>
+            <input type="file" accept="image/*" capture="environment">
+          </div>
+          <div class="file-path-wrapper">
+            <input class="file-path validate" type="text">
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
