--- a/website/index.html
+++ b/website/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <nav class="green lighten-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">サンプルアプリ</a>
+    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">マイアプリ</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#">Navbar Link</a></li>
       </ul>
@@ -28,7 +28,7 @@
     <div class="row">
       <div class="input-field col s12">
         <input id="your_name" type="text">
-        <label for="your_name">Your Name</label>
+        <label for="your_name">Normal Input</label>
       </div>
 
       <div class="input-field col s12">
